--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Personal website // Portfolio",
   "main": "index.js",
+  "files": [
+    "assets"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,16 +19,49 @@
     "url": "https://github.com/Bajix/portfolio/issues"
   },
   "homepage": "https://github.com/Bajix/portfolio#readme",
+  "system": {
+    "main": "@bajix/portfolio/index.stache!done-autorender",
+    "directories": {
+      "lib": "assets"
+    },
+    "plugins": [
+      "steal-css",
+      "steal-stache"
+    ],
+    "configDependencies": [
+      "node_modules/can-zone/register"
+    ],
+    "paths": {
+      "@bajix/portfolio/*.css": "./css/*.css"
+    },
+    "npmAlgorithm": "flat",
+    "map": {}
+  },
   "dependencies": {
     "broccoli": "^1.1.4",
     "broccoli-eyeglass": "^4.1.4",
+    "can-component": "^4.0.0-pre.16",
+    "can-connect": "^2.0.0-pre.12",
+    "can-define": "^2.0.0-pre.19",
+    "can-route": "^4.0.0-pre.13",
+    "can-route-pushstate": "^4.0.0-pre.3",
+    "can-set": "^1.3.3",
+    "can-stache": "^4.0.0-pre.32",
+    "can-stache-route-helpers": "<2.0.0",
+    "can-view-autorender": "^4.0.0-pre.0",
+    "can-zone": "^0.6.13",
     "compression": "^1.7.1",
     "config": "^1.29.4",
+    "done-autorender": "^2.0.0-pre.0",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "morgan": "^1.9.0",
     "perish": "^1.0.1",
     "serve-index": "^1.9.1",
+    "steal": "^1.6.4",
+    "steal-css": "^1.3.2",
+    "steal-stache": "^4.0.0-pre.2",
+    "steal-tools": "^1.11.3",
     "winston": "^2.4.0"
   }
 }
